# awxtop

./: .gitignore  MAINTAINERS.md  README.md  aap-monitor.py  gateway-monitor.py  pyproject.toml
.github/workflows/: build.yml  release.yml
src/awxtop/: __init__.py  aap_monitor.py  awxtop.py
tests/: conftest.py  test_awxtop.py
