[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awxtop"
version = "0.1.0"
description = "Curses-based dashboard for AWX / AAP controllers (topology + jobs)."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "awxtop"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.commands]
bdist_wheel = { }

[project.scripts]
awxtop = "awxtop.awxtop:main"

[project.urls]
Homepage = "https://github.com/mahespth/awxtop"
